--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 #unbind-key C-b # 既定のPrefixキー(Ctrl+b)の割り当てを解除
 set -g prefix C-Space # Ctrl + Spaceをprefixキーにする
 bind-key C-Space send-prefix
+set -sg escape-time 1 # キーストロークのディレイを減らす
 set-window-option -g pane-base-index 1
 set -g base-index 1 # ウィンドウ番号を1から開始
 set -g display-time 5000 # メッセージ表示時間(既定値は5000?)
@@ -19,9 +20,9 @@ set -g status-right '[%Y-%m-%d(%a)%H:%M:%S]'
 unbind-key r
 bind r source-file ~/.tmux.conf
 bind c new-window # 新ウィンドウ作成
-unbind-key k 
-unbind-key K 
-unbind-key X 
+unbind-key k
+unbind-key K
+unbind-key X
 #bind k kill-pane # ペイン終了
 #bind K kill-window # ウィンドウ終了
 #bind X kill-server # kill all
@@ -30,7 +31,7 @@ bind-key -n C-Left select-pane -L
 bind-key -n C-Right select-pane -R
 bind-key -n C-Down select-pane -D
 bind-key -n C-Up select-pane -U
-# Shift + 左右矢印でウィンドウ切替 
+# Shift + 左右矢印でウィンドウ切替
 unbind-key S-Left
 bind-key -n S-Left previous-window
 unbind-key S-Right
