--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,8 @@
     st = status
     br = branch
     hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --all --oneline --decorate
+    #today = log --since=midnight --author='Yuki Adachi' --oneline
+    #today = log --since=midnight --author='$(git config user.name)' --oneline
 [core]
     excludesfile = ~/.gitignore
 [push]
