Add pane_current_path option

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,6 @@ set -g status-right '[%Y-%m-%d(%a)%H:%M:%S]'
 # prefix + r で設定ファイルを再読み込み
 unbind-key r
 bind r source-file ~/.tmux.conf
-bind c new-window # 新ウィンドウ作成
 unbind-key k
 unbind-key K
 unbind-key X
@@ -46,11 +45,12 @@ bind-key -nr M-Up resize-pane -U 5
 bind-key -nr M-Down resize-pane -D 5
 bind-key -nr M-Left resize-pane -L 5
 bind-key -nr M-Right resize-pane -R 5
-bind-key '-' split-window -v # vertical
-bind-key '_' split-window -v # vertical
-bind-key '@' split-window -v # vertical
-bind-key '|' split-window -h # horizontal
-bind-key '\' split-window -h # horizontal
+bind-key c   new-window      -c "#{pane_current_path}"
+bind-key '-' split-window -v -c "#{pane_current_path}" # vertical
+bind-key '_' split-window -v -c "#{pane_current_path}" # vertical
+bind-key '@' split-window -v -c "#{pane_current_path}" # vertical
+bind-key '|' split-window -h -c "#{pane_current_path}" # horizontal
+bind-key '\' split-window -h -c "#{pane_current_path}" # horizontal
 # s : 画面に表示されている内容を自分宛にメールで送る
 #bind s run "tmux capture-pane -S -10000; tmux show-buffer | /usr/sbin/sendmail ...@gmail.com"
 # 複数のペインに対して一斉に同じ文字を入力する
@@ -60,3 +60,5 @@ bind-key '\' split-window -h # horizontal
 # http://doda.b.sourceforge.jp/2011/12/15/tmux-set-clipboard/
 source-file ~/.tmux.local # 環境依存ファイル読み込み
 #display-message "tmux RELOADED..."
+
+
