--- a/.gitconfig
+++ b/.gitconfig
@@ -10,8 +10,9 @@
     br = branch
     hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --all --oneline --decorate
     today = log --since=midnight --author='Yuki Adachi' --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --all --oneline --decorate
-    f = fetch --all --prune && git rebase origin/\"$(git rev-parse --abbrev-ref HEAD)\"
-    p = push origin \"$(git rev-parse --abbrev-ref HEAD)\"
+    branch-name = "!git rev-parse --abbrev-ref HEAD"
+    f = "!git fetch --all --prune && git rebase origin/$(git branch-name)"
+    p = "!git push origin $(git branch-name)"
 [core]
     excludesfile = ~/.gitignore
 [push]
