Add session name into status-left

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ set -g status-right-length 50
 set -g status-interval 0
 set -g set-titles on
 #set -g set-titles-string "#(whoami)@#h"
-set -g status-left "[#(whoami)@#H]"
+set -g status-left "[#(whoami)@#H###S]"
 set -g status-right '[%Y-%m-%d(%a)%H:%M:%S]'
 # prefix + r で設定ファイルを再読み込み
 unbind-key r
