--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,36 +1,31 @@
-#unbind-key C-b # 既定のPrefixキー(Ctrl+b)の割り当てを解除
-set -g prefix C-Space # Ctrl + Spaceをprefixキーにする
+#unbind-key C-b # unbind default prefix-key
+set -g prefix C-Space # set Ctrl + Space as prefix-key
 bind-key C-Space send-prefix
-set -sg escape-time 1 # キーストロークのディレイを減らす
+set -sg escape-time 1
 set-window-option -g pane-base-index 1
-set -g base-index 1 # ウィンドウ番号を1から開始
-set -g display-time 5000 # メッセージ表示時間(既定値は5000?)
-set -g history-limit 50000 # 後方スクロール行数(既定値は2000)
-setw -g mode-keys vi # コピーモードでvi風の操作にしたい場合(既定値はemacs)
+set -g base-index 1 # window number start with 1
+set -g display-time 5000
+set -g history-limit 50000
+setw -g mode-keys vi # vi-mode
 setw -g utf8 on
 set -g status-utf8 on
 set -g status-left-length 100
 set -g status-right-length 50
 set -g status-interval 0
 set -g set-titles on
-#set -g set-titles-string "#(whoami)@#h"
 set -g status-left "[#(whoami)@#H###S]"
 set -g status-right '[%Y-%m-%d(%a)%H:%M:%S]'
-# prefix + r で設定ファイルを再読み込み
 unbind-key r
 bind r source-file ~/.tmux.conf
 unbind-key k
 unbind-key K
 unbind-key X
-#bind k kill-pane # ペイン終了
-#bind K kill-window # ウィンドウ終了
-#bind X kill-server # kill all
-# Ctrl + 矢印でペインの移動
+# Ctrl + arrow-keys to move pane
 bind-key -n C-Left select-pane -L
 bind-key -n C-Right select-pane -R
 bind-key -n C-Down select-pane -D
 bind-key -n C-Up select-pane -U
-# Shift + 左右矢印でウィンドウ切替
+# Shift + arrow-keys to move window
 unbind-key S-Left
 bind-key -n S-Left previous-window
 unbind-key S-Right
@@ -40,7 +35,7 @@ bind-key -r Up resize-pane -U 5
 bind-key -r Down resize-pane -D 5
 bind-key -r Left resize-pane -L 5
 bind-key -r Right resize-pane -R 5
-# Alt キーを押しながら矢印キーで、ペインサイズを変更する。
+# Alt + arrow-keys to change size of pane
 bind-key -nr M-Up resize-pane -U 5
 bind-key -nr M-Down resize-pane -D 5
 bind-key -nr M-Left resize-pane -L 5
@@ -51,14 +46,6 @@ bind-key '_' split-window -v -c "#{pane_current_path}" # vertical
 bind-key '@' split-window -v -c "#{pane_current_path}" # vertical
 bind-key '|' split-window -h -c "#{pane_current_path}" # horizontal
 bind-key '\' split-window -h -c "#{pane_current_path}" # horizontal
-# s : 画面に表示されている内容を自分宛にメールで送る
-#bind s run "tmux capture-pane -S -10000; tmux show-buffer | /usr/sbin/sendmail ...@gmail.com"
-# 複数のペインに対して一斉に同じ文字を入力する
-# http://d.hatena.ne.jp/tmatsuu/20111207/1323270131
 # tmux setw synchronize-panes on
-# リモートの tmux でコピーした内容のローカルのクリップボードへの反映
-# http://doda.b.sourceforge.jp/2011/12/15/tmux-set-clipboard/
-source-file ~/.tmux.local # 環境依存ファイル読み込み
+source-file ~/.tmux.local
 #display-message "tmux RELOADED..."
-
-
