--- a/.psqlrc
+++ b/.psqlrc
@@ -1,1 +1,7 @@
+\set PROMPT2 ''
 \set PROMPT1 '%[%033[1;33;40m%]-- psql(%`psql --version|cut -d " " -f3` on %`hostname`) %`date +%Y-%m-%d` %`date +%H:%M:%S` %n@%M:%>/%/ %x %#%[%033[0m%]\n'
+\pset null '[NULL]'
+\x auto
+\set VERBOSITY verbose
+\set HISTFILE ~/.psql_history- :DBNAME
+\set HISTCONTROL ignoredups
