Add comment for Tmux version verification

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,11 @@ bind-key '_' split-window -v -c "#{pane_current_path}" # vertical
 bind-key '@' split-window -v -c "#{pane_current_path}" # vertical
 bind-key '|' split-window -h -c "#{pane_current_path}" # horizontal
 bind-key '\' split-window -h -c "#{pane_current_path}" # horizontal
+
+# Tmux version verification
+# https://gist.github.com/vincenthsu/6847a8f2a94e61735034e65d17ca0d66
+# ...
+
 # tmux setw synchronize-panes on
 source-file ~/.tmux.local
 #display-message "tmux RELOADED..."
