--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@ set -g base-index 1 # window number start with 1
 set -g display-time 5000
 set -g history-limit 50000
 setw -g mode-keys vi # vi-mode
-setw -g utf8 on
-set -g status-utf8 on
+#setw -g utf8 on
+#set -g status-utf8 on
 set -g status-left-length 100
 set -g status-right-length 50
 set -g status-interval 60
