Change merge config

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,10 +27,10 @@
     path = ~/.gitconfig.local
 [merge]
 	ff = false
-	tool = vimdiff3
-[mergetool "vimdiff3"]
-	cmd = ~/bin/git_merge_wrapper3 \"$MERGED\" \"$LOCAL\" \"$BASE\" \"$REMOTE\"
-[mergetool]
-	keepBackup = false
+#	tool = vimdiff3
+#[mergetool "vimdiff3"]
+#	cmd = ~/bin/git_merge_wrapper3 \"$MERGED\" \"$LOCAL\" \"$BASE\" \"$REMOTE\"
+#[mergetool]
+#	keepBackup = false
 [init]
 	templatedir = ~/.git_template
