Switch panes while in copy mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,13 @@ bind-key -n C-Left select-pane -L
 bind-key -n C-Right select-pane -R
 bind-key -n C-Down select-pane -D
 bind-key -n C-Up select-pane -U
+
+# Switch panes while in copy mode
+bind-key -T copy-mode-vi C-Left select-pane -L
+bind-key -T copy-mode-vi C-Right select-pane -R
+bind-key -T copy-mode-vi C-Down select-pane -D
+bind-key -T copy-mode-vi C-Up select-pane -U
+
 # Shift + arrow-keys to move window
 unbind-key S-Left
 bind-key -n S-Left previous-window
