--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
   url-github        = "!echo https://github.com/$(git project)/$(git repository)/tree/$(git branch-name)"
 [core]
   excludesfile = ~/.gitignore
-  editor = vim
+  editor = nvim
 [push]
   default = nothing
 [include]
