Set mysql prompt

--- a/.my.cnf
+++ b/.my.cnf
@@ -1,11 +1,2 @@
 [mysql]
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # red
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # green
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # yellow
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # blue
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # purple
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # cyan
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # white
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # white
-#prompt='\D \u@\h:\p/\d \v #\c\\n' # italy
-prompt='\D \u@\h:\p/\d \v #\c\\n' # france
+prompt='\u@\h/\d '
