Enable custom.giturl

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -75,7 +75,7 @@ symbol = "🐘"
 format = "[$symbol$version]($style) "
 
 [custom.giturl]
-disabled = true
+disabled = false
 description = "Display symbol for remote Git server"
 command = """
 GIT_REMOTE=$(command git ls-remote --get-url 2> /dev/null)
