--- a/.tmuxinator_samples/hoge.yml
+++ b/.tmuxinator_samples/hoge.yml
@@ -1,35 +1,16 @@
-### # ~/.tmuxinator/hoge.yml
-### 
-### name: hoge
-### root: ~/
-### 
-### # Optional tmux socket
-### # socket_name: foo
-### 
-### # Runs before everything. Use it to start daemons etc.
-### # pre: sudo /etc/rc.d/mysqld start
-### 
-### # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-### # pre_window: rbenv shell 2.0.0-p247
-### 
-### # Pass command line options to tmux. Useful for specifying a different tmux.conf.
-### # tmux_options: -f ~/.tmux.mac.conf
-### 
-### # Change the command to call tmux.  This can be used by derivatives/wrappers like byobu.
-### # tmux_command: byobu
-### 
-### windows:
-###   - editor:
-###       layout: main-vertical
-###       panes:
-###         - vim
-###         - guard
-###   - server: bundle exec rails s
-###   - logs: tail -f log/development.log
-
+# ~/.tmuxinator/hoge.yml
 # :list-windows
 name: log
 root: ~/path/to/..
+
+#on_project_first_start: echo on_project_first_start
+#on_project_restart: echo on_project_restart
+#on_project_exit: echo on_project_exit
+on_project_start:
+  - path/to/start.sh db 5.7.31 3306
+on_project_stop:
+  - path/to/stop.sh db 5.7.31 3306
+
 windows:
   - cmd:
       panes:
