--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -25,9 +25,9 @@ $status\
 $line_break\
 $character"""
 
-#[character]
-#success_symbol = ""
-#error_symbol = "[!](bold red)"
+[character]
+success_symbol = ""
+error_symbol = "[!](bold red)"
 
 [time]
 disabled = false
