--- a/.gitconfig
+++ b/.gitconfig
@@ -10,8 +10,7 @@
 	hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --all --oneline --decorate
 	today = log --since=midnight --author='Yuki Adachi' --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --all --oneline --decorate
 	f                 = "!git fetch --all --prune && git rebase origin/$(git branch-name)"
-	#p                = "!git push origin $(git branch-name) && gh pr create --web"
-	p                 = "!git push origin HEAD && gh pr create --web"
+	p                 = "!git push origin HEAD && type gh > /dev/null && gh pr create --web"
 	repository        = "!git remote -v|grep origin|grep fetch|awk -F '.git ' '{print $1}'|awk -F '/' '{print $NF}'"
 	project           = "!git remote -v|grep origin|grep fetch|awk -F 'https://github.com/|@github.com:|@bitbucket.org:' '{print $2}'|awk -F '/' '{print $1}'"
 	branch-name       = "!git rev-parse --abbrev-ref HEAD"
