--- a/.config/starship/base.toml
+++ b/.config/starship/base.toml
@@ -5,21 +5,12 @@ format = """
 $time\
 $username\
 $hostname\
-$shlvl\
 $directory\
-${custom.giturl}\
 $git_branch\
 ${custom.github_pr_number}\
 ${custom.githash}\
 $git_state\
 $git_status\
-$hg_branch\
-$nix_shell\
-$memory_usage\
-$cmd_duration\
-$jobs\
-$battery\
-$status\
 $line_break\
 $character"""
 
@@ -60,48 +51,17 @@ format = '[\($state( $progress_current of $progress_total)\)]($style) '
 cherry_pick = "[🍒](bold red)"
 
 [git_status]
-conflicted = "🏳"
-ahead = "🏎💨"
-behind = "😰"
-diverged = "😵"
-untracked = "🤷"
-stashed = "📦"
-modified = "📝"
-staged = '[++\($count\)](green)'
-renamed = "👅"
-deleted = "🗑"
-
-[nodejs]
-symbol = ""
-version_format = "${major}.${minor}"
-format = "[$symbol$version]($style) "
-
-[php]
-symbol = ""
-version_format = "${major}.${minor}"
-format = "[$symbol$version]($style) "
-
-[custom.giturl]
-disabled = true
-description = "Display symbol for remote Git server"
-command = """
-GIT_REMOTE=$(command git ls-remote --get-url 2> /dev/null)
-if [[ "$GIT_REMOTE" =~ "github" ]]; then
-    GIT_REMOTE_SYMBOL=""
-elif [[ "$GIT_REMOTE" =~ "gitlab" ]]; then
-    GIT_REMOTE_SYMBOL=""
-elif [[ "$GIT_REMOTE" =~ "bitbucket" ]]; then
-    GIT_REMOTE_SYMBOL=""
-elif [[ "$GIT_REMOTE" =~ "git" ]]; then
-    GIT_REMOTE_SYMBOL=""
-else
-    GIT_REMOTE_SYMBOL=""
-fi
-echo "$GIT_REMOTE_SYMBOL "
-"""
-when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
-shell = ["bash", "--noprofile", "--norc"]
-format = "$output "
+conflicted = 'Conflicted:$count '
+ahead = 'Ahead:$count '
+behind = 'Behind:$count '
+diverged = 'Ahead:$count Behind:$count '
+untracked = 'Untracked:$count '
+stashed = 'Stashed:$count '
+modified = 'Modified:$count '
+renamed = 'Renamed:$count '
+deleted = 'Deleted:$count '
+staged = 'Staged:$count '
+format = '[$all_status$ahead_behind]($style)'
 
 [custom.githash]
 disabled = false
