--- a/.config/starship/base.toml
+++ b/.config/starship/base.toml
@@ -79,7 +79,7 @@ disabled = false
 description = "Display github pr number"
 command = """
 GITHUB_PR_NUMBER=$(gh api --cache 1m \"/repos/$(git project)/$(git repository)/pulls?head=$(git project):$(git branch-name)\"|jq '.[].number')
-echo "${GITHUB_PR_NUMBER} "
+echo "ghgo.jp/${ORG}/${REPOSITORY}/${GITHUB_PR_NUMBER} "
 """
 when = 'git rev-parse --is-inside-work-tree 2> /dev/null'
 shell = ["bash", "--noprofile", "--norc"]
